--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>A Data Analyst With Experience in The IT and Banking Sector.</h2>
 						</header>
-						<p>Experienced data analyst with a background in IT and banking industry. Skilled in data analysis, visualization, and modeling using SQL, Python, and Tableau. Strong understanding of financial data and risk management. Proficient in data cleaning and processing techniques to ensure data accuracy. Proven track record of delivering actionable insights to drive business decisions.</p>
+						<p>An experienced data analyst with a background in IT and banking industry. Skilled in data analysis, visualization, and modeling using SQL, Python, and Tableau. Strong understanding of financial data and risk management. Proficient in data cleaning and processing techniques to ensure data accuracy. Proven track record of delivering actionable insights to drive business decisions.</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/joshuaose/" target="_blank" class="button" font="+2"><strong>LinkedIn</strong></a></li>
 						</ul>		
