--- a/index.html
+++ b/index.html
@@ -46,14 +46,9 @@
 								<p>In this project Nashville housing data was cleaned using SQL server.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://github.com/Joshua-sage/MyPortflolio/blob/main/COVID%20portolio%20Project.sql" target="_blank" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="https://github.com/Joshua-sage/2023-COVID-19-SQL-Data-Exploration" target="_blank" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>2023 COVID 19 Data Exploration in SQL</h3>
 								<p>Exploration of COVID-19 Data Set in SQL server.</p>
-							</article>
-							<article class="col-6 col-12-xsmall">
-								<a href="https://public.tableau.com/app/profile/osagie.joshua/viz/CovidDashboard2023/COVID2023Dashboard" target="_blank" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>2023 COVID-19 Dashboard in Tableau</h3>
-								<p>Visualization Of The 2023 COVID-19 Data set.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="https://public.tableau.com/app/profile/osagie.joshua/viz/GlobalCOVIDVaccineTracker/CovidVaccineTracker" target="_blank" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
