--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<p>Exploration of COVID-19 Data Set in SQL server.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="https://public.tableau.com/app/profile/osagie.joshua/viz/GlobalCOVIDVaccineTracker/CovidVaccineTracker" target="_blank" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="https://github.com/Joshua-sage/Global-Vaccine-Tracker-Dashboard" target="_blank" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>COVID-19 Vaccine Tracker Dashboard in Tableau</h3>
 								<p>This project is a visualization of the Global COVID-19 Vaccine data.</p>
 							</article>
