--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<h2>Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
-								<a href="https://github.com/Joshua-sage/MyPortflolio/blob/main/DataCleaning%20Project.sql" target="_blank" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://github.com/Joshua-sage/Nashville-Housing-Data-Analysis" target="_blank" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Cleaning Housing Data in SQL</h3>
 								<p>In this project Nashville housing data was cleaned using SQL server.</p>
 							</article>
